refactor to display logged user

--- a/src/main/webapp/files/styles.css
+++ b/src/main/webapp/files/styles.css
@@ -22,8 +22,7 @@ div {
     grid-column-start: 1;
     grid-column-end: 3;
     height: 10vh;
-    /*background-color: #111;*/
-
+    background-color: #111;
 }
 
 .nav {
